--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,85 @@
-.flex-div {
-  display: flex;
-  align-items: center;
+.nav-container{
+  position: relative;
+  width: 100%;
+  border-radius: 10px;
+  padding: 2px;
+  overflow: hidden;
+  height: 60px;
+}
+.nav-container::before{
+  
+  content: '';
+  position: absolute;
+  top: -100%;
+  /* left: -10%; */
+  width: 1000px;
+  height: 1000px;
+  background: linear-gradient(0deg,transparent,
+  transparent,#45ff83,#45f3ff,#45f3ff
+  );
+  transform-origin: bottom right;
+  z-index: 1;
+  animation: animate 4s linear infinite;
+}
+.nav-container::after{
+  
+  content: '';
+  position: absolute;
+  top: -100%;
+  left: -10%;
+  width: 1000px;
+  height: 1000px;
+  background: linear-gradient(0deg,transparent,
+  transparent,#ca45ff,#45f3ff,#45f3ff
+  );
+  transform-origin: bottom right;
+  z-index: 1;
+  animation: animate2 4s linear infinite;
+  animation-delay: -6s;
+}
+@keyframes animate {
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+  
+}
+@keyframes animate2 {
+  0%{
+    transform: rotate(360deg);
+  }
+  100%{
+    transform: rotate(0deg);
+  }
+  
 }
 
-nav {
-  background: rgb(35, 37, 46);
-  height: 40px;
-  border-bottom: 1px solid rgba(92, 168, 255, 0.7);
-  box-shadow: 0 0 10px 5px rgba(92, 168, 255, 0.7);
-  padding: 1% 3%;
+
+.inside-nav{
+  position: relative;
+  background: black;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  
 }
-nav .left-container {
-  /* background-color: red; */
-  color: rgba(0, 116, 248, 0.7);
+.d-flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.glowing-text {
-  text-shadow:
-    0 0 5px rgba(0, 116, 248, 0.7),
-    0 0 5px rgba(0, 116, 248, 0.7),
-    0 0 5px rgba(0, 116, 248, 0.7),
-    0 0 5px rgba(0, 116, 248, 0.7);
-  font-size: 30px;
-  -webkit-text-stroke: .5px #ffffff;
-  font-family: Arial, sans-serif;
+.bg{
+  background: #2b2b2b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 88vh;
+  position: relative;
+}
+.left-container{
+  color: white;
+  width: 100%;
+  height: 100%;
 }
